--- a/Assignment2_PigGame/app/src/main/res/values/array.xml
+++ b/Assignment2_PigGame/app/src/main/res/values/array.xml
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="die_sides_alignment">
-        <item>"D6 (Standard)"</item>
+        <item>"D6"</item>
         <item>"D10"</item>
-        <item>"D20"</item>
     </string-array>
     <string-array name="die_sides_values">
         <item>6</item>
         <item>10</item>
-        <item>20</item>
+    </string-array>
+
+    <string-array name="dice_number_alignment">
+        <item>"1 Die"</item>
+        <item>"2 Dice"</item>
+        <item>"3 Dice"</item>
+    </string-array>
+    <string-array name="dice_number_values">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
     </string-array>
 </resources>
 
