Working Settings and About screens. Added several user specified features to make the game more interesting
Working Features:
- Die Sides: D6 and D10 options
- Number of Dice: 1, 2 and 3
- Points to Win: any number
- Background options: Plain, and Image

Bugs:
- Crash when switching from D6 to D10 and rolling. Sometimes die hits
index of -1. This should not be possible, haven't figured out why it is
happening.

--- a/Assignment2_PigGame/app/src/main/res/xml/activity_settings.xml
+++ b/Assignment2_PigGame/app/src/main/res/xml/activity_settings.xml
@@ -19,8 +19,13 @@
         android:entries="@array/dice_number_alignment"
         android:entryValues="@array/dice_number_values"
         android:title="Number of Dice">
-
     </ListPreference>
 
+    <ListPreference
+        android:key="pref_bgcolor"
+        android:entries="@array/bgcolor_alignment"
+        android:entryValues="@array/bgcolor_values"
+        android:title="Background Color">
+    </ListPreference>
 
 </PreferenceScreen>
