--- a/Assignment2_PigGame/app/src/main/res/layout/activity_main.xml
+++ b/Assignment2_PigGame/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
-    android:background="@drawable/pigbackground">
+    android:background="@drawable/pigbackground"
+    android:id="@+id/main">
 
 
     <LinearLayout
