--- a/Assignment2_PigGame/app/src/main/res/values/array.xml
+++ b/Assignment2_PigGame/app/src/main/res/values/array.xml
@@ -19,5 +19,16 @@
         <item>2</item>
         <item>3</item>
     </string-array>
+
+    <string-array name="bgcolor_alignment">
+        <item>"Image"</item>
+        <item>"Plain"</item>
+    </string-array>
+
+    <string-array name="bgcolor_values">
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+
 </resources>
 
