--- a/Assignment3_PigGame/app/src/main/res/layout-large-port/first_activity.xml
+++ b/Assignment3_PigGame/app/src/main/res/layout-large-port/first_activity.xml
@@ -8,10 +8,10 @@
         android:id="@+id/first_fragment"
         android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="0dp" />
     <fragment android:name="com.example.jnelson.assignment2_piggame.SecondFragment"
         android:id="@+id/second_fragment"
         android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="0dp" />
 </LinearLayout>
